--- a/web/ja/manual/topic/office/docdesc.html
+++ b/web/ja/manual/topic/office/docdesc.html
@@ -47,6 +47,9 @@
 		<dt>Slack登録トークン</dt><dd>"海" の英単語を小文字三文字で</dd>
 		<dt>Slack自体のURL</dt><dd><a href="https://dbflute.slack.com/messages/">https://dbflute.slack.com/messages/</a></dd>
 	</dl>
+	<p>
+		※仕組み的に <em class="keyword">誰でも閲覧できるチャット</em> になりますので、それを前提に投稿をお願いします。将来はチャットの内容をサイトで自動公開できるようにしたいとも考えています。ゆえに "公開Slack" と銘打っています。
+	</p>
 
 	<h2 id="pullreq">ドキュメントのプルリクエスト</h2>
 	<p>
