--- a/web/ja/manual/topic/office/feedback.html
+++ b/web/ja/manual/topic/office/feedback.html
@@ -41,7 +41,7 @@
 		DBFluteユーザの集いで投稿するときは、Google Group に入会をお願いします。
 	</p>
 	<div class="relatedpage"><a href="http://groups.google.co.jp/group/dbflute">DBFluteユーザの集い | Google Group</a></div>
-	<h3 id="dbfluteslack">公開チャット (DBFlute Slack)</h3>
+	<h3 id="dbfluteslack">チャット (DBFlute Slack)</h3>
 	<p>
 		気軽にチャットで質問や相談などができる <em class="mark">公開Slack</em> がありますので、ぜひご利用ください。
 		<span class="frm">(Slack登録ページで、自身のメールアドレスと登録トークンを入力すると招待メールが送信されます)</span>
@@ -61,6 +61,9 @@
 	</dl>
 	<p>
 		他にもいくつかユニークなチャンネルが用意されています。どのチャンネルも出入り閲覧自由ですしので、ぜひお気軽に眺めてみてください。 
+	</p>
+	<p>
+		※仕組み的に <em class="keyword">誰でも閲覧できるチャット</em> になりますので、それを前提に投稿をお願いします。将来はチャットの内容をサイトで自動公開できるようにしたいとも考えています。ゆえに "公開Slack" と銘打っています。
 	</p>
 	<h3 id="twitter">Twitter (jflute)</h3>
 	<p>
