add changelog for patch 2019/08/22

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,11 +28,29 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.1 <span class="frm">※Java8</span></h2>
+        <p class="releas5date">2019/xx/xx</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: split displaySql setup for application mask requirement</li>
+            <li>DBFlute Runtime: migrate old MapListFile to new DfMapFile</li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.0 <span class="frm">※Java8</span></h2>
         <p class="releas5date">2019/05/01</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: ReplaceSchema, show detail performance view <span class="frm">*8/22パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicy, adjust sameColumnDbTypeIfSameColumnName <span class="frm">*8/22パッチ</span></li>
+            <li>DBFlute Engine: quote table/column of classification checker <span class="frm">*8/22パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, self reference fk order <span class="frm">*8/22パッチ</span></li>
             <li>DBFlute Engine: Sql2Entity, parameter bean property for fixed classification list <span class="frm">*7/22パッチ</span></li>
             <li>DBFlute Engine: firstDate comparison should not use time part <span class="frm">*5/12パッチ</span></li>
             <li>DBFlute Engine: just fix: SchemaPolicyCheck needs history so use lazy-load <span class="frm">*5/12パッチ</span></li>
