--- a/web/ja/tutorial/handson/review/jflutereview.html
+++ b/web/ja/tutorial/handson/review/jflutereview.html
@@ -31,6 +31,8 @@
 	<p>
 		DBFluteハンズオンで、jfluteレビューを受ける方へ
 	</p>
+	<div class="relatedpage"><a href="../index.html">DBFluteハンズオン</a></div>
+	<div class="relatedpage"><a href="../section01.html">ハンズオンセクション 1</a></div>
 
 	<h2 id="env">環境構築</h2>
 	<h3 id="gitrepo">Gitリポジトリの準備</h3>
