--- a/web/ja/tutorial/handson/review/jflutereview.html
+++ b/web/ja/tutorial/handson/review/jflutereview.html
@@ -47,7 +47,7 @@
 		<li>B. 別のgitリポジトリにハンズオンをコピー (そして双方に権限を付与) <span class="frm">(公開・非公開はgit次第)</span></li>
 	</ul>
 	<p>
-		<span class="frm">(組織的にレビュー運用している場合は、大抵は "B" の可能性が高いので周りに確認をしましょう)</span>
+		<span class="frm">(組織的にレビュー運用している場合は、大抵は "B" の可能性が高いので周りに確認をしましょう。複数人でリポジトリを共有するのであれば、それぞれ自分用のブランチを作成しましょう)</span>
 	</p>
 	<p>
 		以下がオフィシャルリポジトリです。フォークもしくはコピーする場合はこちらから:
