make empty page for AlterCheck by DBFlute Intro

--- a/web/ja/manual/function/generator/task/replaceschema/altercheck.html
+++ b/web/ja/manual/function/generator/task/replaceschema/altercheck.html
@@ -203,6 +203,18 @@ dbflute_maihamadb
 	<p>
 		<em class="keyword">ひとつのフェーズで何度でも</em>
 	</p>
+	<h3 id="useintro">AlterCheckやるならIntro推奨</h3>
+	<p>
+		AlterCheckをやるのであれば、<em class="mark">DBFlute Intro</em> の画面がオススメです。
+	</p>
+	<div class="detailpage"><a href="../../intro/alterbyintro.html">AlterCheck を Intro で</a></div>
+	<p>
+		ファイル名のルールやディレクトリ構造を意識せずに安全に実施することができます。
+		特別な理由がない限りは、DBFlute Intro で AlterCheck を実施しましょう。
+	</p>
+	<p>
+		※仕組みや流れを把握しておくという意味で、以下の詳しい手順にも目を通しておくと良いでしょう。
+	</p>
 	<h3 id="updatenextddl">(0. DB変更でNextDDLを更新)</h3>
 	<p>
 		NextDDLを更新する前にAlterCheckはできませんので、先にERDを修正するなどして NextDDL
