--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -26,7 +26,7 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>AlterCheck を Intro で</h1>
 	<div class="relatedpage"><a href="./index.html">DBFlute Intro</a></div>
-	<div class="relatedpage"><a href="../task/replaceschema/altercheck">AlterCheck</a></div>
+	<div class="relatedpage"><a href="../task/replaceschema/altercheck.html">AlterCheck</a></div>
 	${indexlist}
 
 	<h2>書き途中</h2>
