add links to AlterCheck

--- a/web/ja/manual/function/generator/task/replaceschema/altercheck.html
+++ b/web/ja/manual/function/generator/task/replaceschema/altercheck.html
@@ -29,6 +29,8 @@
 		Alto DBFlute のパートです。
 	</p>
 	<div class="relatedpage"><a href="../../../../../introduction/altodbflute.html">Alto DBFlute</a></div>
+	<div class="relatedpage"><a href="./livingdbmigration.html">LivingDBMigration</a></div>
+	<div class="relatedpage"><a href="../../intro/alterbyintro.html">AlterCheck を Intro で</a></div>
 	${indexlist}
 
 	<h2 id="concept">AlterCheckのコンセプト</h2>
