fix code tag title of AlterCheck

--- a/web/ja/manual/function/generator/task/replaceschema/altercheck.html
+++ b/web/ja/manual/function/generator/task/replaceschema/altercheck.html
@@ -101,7 +101,7 @@
 	<p>
 		ざっくり頭に入れておきましょう。
 	</p>
-<pre><span class="codetitle">e.g. PreviousDDL が正常に保存された場合 @playsql</span><code>
+<pre><span class="codetitle">e.g. AlterCheckのディレクトリ構造の全体ざっくり @Directory</span><code>
 dbflute_maihamadb
  |-playsql
     |-data <span class="comment">// ReplaceSchemaの登録データのディレクトリ</span>
