write about review no wait

--- a/web/ja/tutorial/handson/review/jflutereview.html
+++ b/web/ja/tutorial/handson/review/jflutereview.html
@@ -141,6 +141,13 @@
 		実業務でも、バグが出て直してすぐに別のところで全く同じバグがあって直して...の繰り返しはしたくないものです。
 		<em class="keyword">ひとつ指摘されたら似たようなところが他にもないか探す</em> という習慣が大切です。
 	</p>
+	<h3 id="reviewnowait">レビュー待たずに先に進む by レビューイー</h3>
+	<p>
+		jfluteのレビューは、夜中や土日が中心でいつできるかわからないので、レビューを待たずに先に進みましょう。
+	</p>
+	<p>
+		ただ、あまり先に進み過ぎるとレビュー指摘による横断的な手戻りが発生しやすいので、最初の頃はレビューを催促してください。逆に、手戻りが発生しないように、レビューをもらったらレビュー修正を優先しましょう。
+	</p>
 
 	<h2 id="codepolicy">コードポリシー</h2>
 	<p>
