write about commitonday

--- a/web/ja/tutorial/handson/review/jflutereview.html
+++ b/web/ja/tutorial/handson/review/jflutereview.html
@@ -148,6 +148,11 @@
 	<p>
 		ただ、あまり先に進み過ぎるとレビュー指摘による横断的な手戻りが発生しやすいので、最初の頃はレビューを催促してください。逆に、手戻りが発生しないように、レビューをもらったらレビュー修正を優先しましょう。
 	</p>
+	<h3 id="commitonday">帰る前にはコミット＆プッシュする by レビューイー</h3>
+	<p>
+		ハンズオンは気軽にコミットして問題ありません<span class="frm">(コンパイルエラーや警告が残ってないようにだけ注意)</span>。
+		バックアップも兼ねて、帰る前にはコミット＆プッシュしましょう。夜中にjfluteがレビューするかもしれません。
+	</p>
 
 	<h2 id="codepolicy">コードポリシー</h2>
 	<p>
