adjust hands-on requirement

--- a/web/ja/tutorial/handson/flower/flower03.html
+++ b/web/ja/tutorial/handson/flower/flower03.html
@@ -327,11 +327,13 @@ dbflute-hands-on
     }
 
     <span class="comment">/**
-     * [6] 会員名称に "vi" を含む会員を検索
+     * [6] 2005年10月の1日から3日までに正式会員になった会員を検索
+     * o 画面からの検索条件で2005年10月1日と2005年10月3日がリクエストされたと想定
+     * o Arrange で String の "2005/10/01", "2005/10/03" を一度宣言してから日時クラスに変換
+     * o 時分秒は "00:00:00" になるようにして、(日付移動などせず)そのまま使って条件を設定
      * o 会員ステータスも一緒に取得
      * o ただし、会員ステータス名称だけ取得できればいい (説明や表示順カラムは不要)
-     * o 2005年10月の1日から3日までに正式会員になった会員を検索
-     * o "2005/10/01", "2005/10/03" の日付文字列が画面からリクエストされたと想定 (ArrangeでString型を宣言)
+     * o 会員名称に "vi" を含む会員を検索
      * o 会員名称と正式会員日時と会員ステータス名称をログに出力
      * o 会員ステータスがコードと名称だけが取得されていることをアサート
      * o 会員の正式会員日時が指定された条件の範囲内であることをアサート
@@ -433,9 +435,9 @@ dbflute-hands-on
 
     <span class="comment">/**
      * [8] 1974年までに生まれた、もしくは不明の会員を検索
-     * o "1974/01/01" という日付文字列が画面からリクエストされたと想定
-     * o Arrange で String の "1974/01/01" を宣言して、Act ではそれを使って検索
-     * o Arrange, Actでは "1974/01/01" 以外の日付は作らずに条件を実現すること
+     * o 画面からの検索条件で1974年がリクエストされたと想定
+     * o Arrange で String の "1974/01/01" を一度宣言してから日付クラスに変換
+     * o その日付クラスの値を、(日付移動などせず)そのまま使って検索条件を実現
      * o 会員ステータス名称、リマインダ質問と回答、退会理由入力テキストも取得(ログ出力)
      * o 若い順だが生年月日が null のデータを最初に並べる
      * o 生年月日が指定された条件に合致することをアサート (1975年1月1日なら落ちるように)
@@ -512,9 +514,9 @@ dbflute-hands-on
 
     <span class="comment">/**
      * [9] 2005年6月に正式会員になった会員を先に並べて生年月日のない会員を検索
-     * o "2005/06/01" という日付文字列がリクエストされたと想定
-     * o Arrange で String の "2005/06/01" を宣言して、Act ではそれを使って検索
-     * o Arrange, Actでは "2005/06/01" 以外の日付は作らずに条件を実現すること (日付への変換はOK)
+     * o 画面からの検索条件で2005年6月がリクエストされたと想定
+     * o Arrange で String の "2005/06/01" を一度宣言してから日付クラスに変換
+     * o その日付クラスの値を、(日付移動などせず)そのまま使って検索条件を実現
      * o 第二ソートキーは会員IDの降順
      * o 検索された会員の生年月日が存在しないことをアサート
      * o 2005年6月に正式会員になった会員が先に並んでいることをアサート (先頭だけじゃなく全体をチェック)
