feedback from hands-on player

--- a/web/ja/manual/function/genbafit/implfit/classification/index.html
+++ b/web/ja/manual/function/genbafit/implfit/classification/index.html
@@ -396,7 +396,7 @@ cb.query().<span class="point">setMemberStatusCode_InScope_ServiceAvailable()</s
             ; <span class="point">sisterCode</span>=true
         }
         ; <span class="keyword">map:</span>{
-            code=0; name=False; alias=Unchecked; comment=フラグが立っていない
+            ; code=0; name=False; alias=Unchecked; comment=フラグが立っていない
             ; <span class="point">sisterCode</span>=false
         }
     }
