--- a/web/ja/tutorial/handson/section02.html
+++ b/web/ja/tutorial/handson/section02.html
@@ -137,7 +137,7 @@ PROJECT_ROOT
 	<h3>メソッド名とBehaviorの宣言</h3>
 	<p>
 		テストメソッド名は、"test_existsTestData()" とし、MemberBhv を private のインスタンス変数として宣言してください。
-		Lasta Di では、@Resource というアノテーションを付けるとDI対象フィールドとなります。<span class="frm">(_lap という補完を使うと少し楽になるかも)</span>
+		Lasta Di では、@Resource というアノテーションを付けるとDI対象フィールドとなります。<span class="frm">(_ladany という補完を使うと少し楽になるかも)</span>
 	</p>
 <pre><span class="codetitle">e.g. test_existsTestData() の実装準備 @Java</span><code>
 <span class="keyword">public class</span> HandsOn02Test <span class="keyword">extends</span> UnitContainerTestCase {
