--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -81,7 +81,7 @@
 			</p>
 			<ul>
 				<li>リリース前のAlterDDLを確認する</li>
-				<li>新しいAlterDDLを作成する</li>
+				<li>AlterCheckの準備をする</li>
 			</ul>
 			<p class="imgbox">Step1画面
 				<a href="../../../../../data/snapshot/intro/alter/alter-step1.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step1.png" alt="DBFluteIntro Top" width="550" /></a>
