improve requirement of hands-on section4

--- a/web/ja/tutorial/handson/section04.html
+++ b/web/ja/tutorial/handson/section04.html
@@ -269,7 +269,7 @@
 				<li>正式会員で一番若い、仮会員で一番若い、という風にそれぞれのステータスで若い会員を検索</li>
 				<li>一回の ConditionBean による検索で会員たちを検索すること <span class="frm">(PartitionBy...)</span></li>
 				<li>ログのSQLを見て、検索が妥当であることを目視で確認すること</li>
-				<li>検索結果がステータスの件数以上であることをアサート</li>
+				<li>検索結果が想定されるステータスの件数以上であることをアサート</li>
 				<li>ひとまず動作する実装ができたら、ArrangeQueryを活用してみましょう</li>
 			</ul>
 		</dd>
