add supplement of upgrade task, about maven

--- a/web/ja/environment/upgrade/index.html
+++ b/web/ja/environment/upgrade/index.html
@@ -45,7 +45,7 @@
 		を叩いて、自動生成し直します。<span class="frm">(この時点ではまだコンパイルエラーの可能性あり)</span>
 	</p>
 	<p>
-		そして、DBFluteランタイムを最新にしましょう。例えば、Mavenで依存ライブラリを管理しているなら、(手動で) pom.xml を修正します。
+		そして、DBFluteランタイムを最新にしましょう。例えば、Mavenで依存ライブラリを管理しているなら、(手動で) pom.xml を修正します。<span class="frm">(修正後のMavenへの反映はアプリのやり方次第で)</span>
 	</p>
 	<h3 id="oldstyle">それ以前のバージョンからアップグレード</h3>
 	<p>
