--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -89,8 +89,8 @@
 
 			<h4>リリース前のAlterDDLを確認する</h4>
 			<p>
-				Step1の画面で表示されているのは、未リリースでチェック済みのAlterDDLの一覧です。
-				ファイル名をクリックすることで、AlterDDLの中身を確認することができます。この時点で、すでに自分の入れたいDB変更が入っていないか確認してください。
+				Step1の画面で表示されているのは、（他の人が作業した）未リリースでチェック済みのAlterDDLの一覧です。
+				ファイル名をクリックすることで、AlterDDLの中身を確認することができます。この時点で、自分の入れたいDB変更がすでに入っていないか（重複していないか）確認してください。
 			</p>
 			<p class="imgbox">Step1画面でリリース前のAlterDDLの中身を確認する
 				<a href="../../../../../data/snapshot/intro/alter/alter-step1-check-alterddl.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step1-check-alterddl.png" alt="DBFluteIntro Top" width="550" /></a>
@@ -123,7 +123,7 @@ dbflute_yourdb
 			<h4>AlterCheckの準備をする</h4>
 			<p>
 				新たにDB変更を加えAlterDDLを作成したい場合は、作成するAlterDDLのファイル名を入力して、<em class="mark">Begin</em>ボタンを押してください。
-				リリース前のSQLを修正修正したい場合は、<em class="mark">Fix</em>ボタンを押してください。
+				リリース前のSQLを修正したい場合は、<em class="mark">Fix</em>ボタンを押してください。
 				この操作を行うと、DBFluteクライアントプロジェクト内部でAlterCheckをする準備が整い、Step2に進みます。<br>
 			</p>
 			<p class="imgbox">Step1画面でAlterCheckの準備をする
@@ -149,7 +149,7 @@ dbflute_yourdb
 				編集中のAlterDDLが格納されているディレクトリをみなさんのOSに搭載されているファイルエクスプローラで開くには、<em class="mark">SQL Files Directory</em> ボタンを押します。
 				ここから、任意のエディタを利用して、AlterDDLを編集してください。
 			</p>
-			<p class="imgbox">Step2画面でAlterDDLを編集する
+			<p class="imgbox">Step2画面でAlterDDLを編集する（Macの例）
 				<a href="../../../../../data/snapshot/intro/alter/alter-step2-open.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step2-open.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 			<pre><span class="codetitle">ボタンを押すと開くディレクトリの場所</span><code>
@@ -166,7 +166,7 @@ dbflute_yourdb
 				確認ダイアログが表示され、OKボタンを押すとAlterCheckを実行されます。
 				AlterCheckが正常に終わった場合に、Step1画面に自動的に戻ります。
 			</p>
-			<p class="imgbox">Step2画面でAlterDDLを実行する
+			<p class="imgbox">Step2画面でAlterDDLを実行する（Macの例）
 				<a href="../../../../../data/snapshot/intro/alter/alter-step2-execute.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step2-execute.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
