--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -46,6 +46,7 @@
 				<li>
 					<a href="#operation">操作の流れ</a>
 					<ul>
+						<li><a href="#precondition">DBFlute Introを起動</a></li>
 						<li><a href="#step1">Step1. AlterSQL を準備する</a></li>
 						<li><a href="#step2">Step2. AlterCheckを実行する</a></li>
 						<li><a href="#next" >Step1画面に戻ったら</a></li>
@@ -72,9 +73,16 @@
 				AlterCheckは大きく分けて2つのステップに分かれています。
 			</p>
 			<ul>
+				<li>DBFlute Introを起動</li>
 				<li>Step1. AlterCheckの下準備をする</li>
 				<li>Step2. AlterCheckを実行する</li>
 			</ul>
+
+			<h3 id="precondition">DBFlute Introを起動</h3>
+			<p>
+				manage.sh|bat の 88 (intro) を実行して、Introを起動しましょう。
+			</p>
+
 			<h3 id="step1">Step1. AlterCheckの下準備をする</h3>
 			<p>
 				この画面で行う操作は2つあります。
