--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 
-		<div id="content">
+		<div id="content"><!-- __content-start__ -->
 			<h1>AlterCheck を Intro で</h1>
 			<div class="relatedpage"><a href="./index.html">DBFlute Intro</a></div>
 			<div class="relatedpage"><a href="../task/replaceschema/altercheck.html">AlterCheck</a></div>
@@ -207,7 +207,7 @@ dbflute_yourdb
 				晴れてAlterCheckがうまくいきました！！<br>
 				またDB変更をする場合は、Step1画面から作業を繰り返してください。
 			</p>
-		</div>
+		<!-- __content-end__ --></div>
 	</div>
 
 	<div id="sidebar">
