--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -29,12 +29,24 @@
 
       <div class="release">
         <h2>DBFlute-1.2.1 <span class="frm">※Java8</span></h2>
-        <p class="releas5date">2019/xx/xx</p>
+        <p class="releas5date">2019/10/20</p>
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: make new whole-NG-state.dfmap for AlterCheck</li>
+            <li>DBFlute Engine: AlterCheck renewal for parallel work</li>
+            <li>DBFlute Engine: adjust SchemaDiff for H2 database default sequence</li>
             <li>DBFlute Runtime: split displaySql setup for application mask requirement</li>
             <li>DBFlute Runtime: migrate old MapListFile to new DfMapFile</li>
+            <li>DBFlute Engine: ReplaceSchema, show detail performance view <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: SchemaPolicy, adjust sameColumnDbTypeIfSameColumnName <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: quote table/column of classification checker <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: LoadDataReverse, self reference fk order <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: Sql2Entity, parameter bean property for fixed classification list <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: firstDate comparison should not use time part <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: just fix: SchemaPolicyCheck needs history so use lazy-load <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: just fix: SchemaPolicyCheck needs firstDateAgent <span class="frm">*前回パッチ</span></li>
+            <li>DBFlute Engine: fix SchemaPolicyCheck with classification deployment <span class="frm">*前回パッチ</span></li>
           </ul>
           <h3>BUG</h3>
           <ul>
