--- a/web/ja/manual/function/generator/intro/alterbyintro.html
+++ b/web/ja/manual/function/generator/intro/alterbyintro.html
@@ -43,15 +43,27 @@
 			<ul class="indexlist">
 				<li><a href="#about">AlterCheckとは？</a></li>
 				<li><a href="#where">AlterCheckの画面はどこにある？</a></li>
+				<li><a href="#operation">操作の流れ</a></li>
 				<li>
-					<a href="#operation">操作の流れ</a>
+					<a href="#step1">Step1. AlterSQL を準備する</a>
 					<ul>
-						<li><a href="#precondition">DBFlute Introを起動</a></li>
-						<li><a href="#step1">Step1. AlterSQL を準備する</a></li>
-						<li><a href="#step2">Step2. AlterCheckを実行する</a></li>
-						<li><a href="#next" >Step1画面に戻ったら</a></li>
+						<li><a href="#step1-inner-0">DBFlute Introを起動</a></li>
+						<li><a href="#step1-inner-1">Step1画面での操作</a></li>
+						<li><a href="#step1-inner-2">リリース前のAlterDDLを確認する</a></li>
+						<li><a href="#step1-inner-3">AlterCheckの準備をする</a></li>
 					</ul>
 				</li>
+				<li>
+					<a href="#step2">Step2. AlterCheckを実行する</a>
+					<ul>
+						<li><a href="#step2-inner-0">Step2画面での操作</a></li>
+						<li><a href="#step2-inner-1">AlterDDLを編集する</a></li>
+						<li><a href="#step2-inner-2">AlterCheckを実行する</a></li>
+						<li><a href="#step2-inner-3">AlterCheck失敗の理由を確認する</a></li>
+					</ul>
+				</li>
+				<li><a href="#next" >Step1画面に戻ったら</a></li>
+
 			</ul>
 
 			<h2 id="about">AlterCheckとは？</h2>
@@ -73,17 +85,17 @@
 				AlterCheckは大きく分けて2つのステップに分かれています。
 			</p>
 			<ul>
-				<li>DBFlute Introを起動</li>
 				<li>Step1. AlterCheckの下準備をする</li>
 				<li>Step2. AlterCheckを実行する</li>
 			</ul>
 
-			<h3 id="precondition">DBFlute Introを起動</h3>
+			<h2 id="step1">Step1. AlterCheckの下準備をする</h2>
+			<h3 id="step1-inner-0">DBFlute Introを起動</h3>
 			<p>
 				manage.sh|bat の 88 (intro) を実行して、Introを起動しましょう。
 			</p>
 
-			<h3 id="step1">Step1. AlterCheckの下準備をする</h3>
+			<h3 id="step1-inner-1">Step1画面での操作</h3>
 			<p>
 				この画面で行う操作は2つあります。
 			</p>
@@ -95,7 +107,7 @@
 				<a href="../../../../../data/snapshot/intro/alter/alter-step1.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step1.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
-			<h4>リリース前のAlterDDLを確認する</h4>
+			<h3 id="step1-inner-2">リリース前のAlterDDLを確認する</h3>
 			<p>
 				Step1の画面で表示されているのは、（他の人が作業した）未リリースでチェック済みのAlterDDLの一覧です。
 				ファイル名をクリックすることで、AlterDDLの中身を確認することができます。この時点で、自分の入れたいDB変更がすでに入っていないか（重複していないか）確認してください。
@@ -128,7 +140,7 @@ dbflute_yourdb
 </code></pre>
 
 
-			<h4>AlterCheckの準備をする</h4>
+			<h3 id="step1-inner-3">AlterCheckの準備をする</h3>
 			<p>
 				新たにDB変更を加えAlterDDLを作成したい場合は、作成するAlterDDLのファイル名を入力して、<em class="mark">Begin</em>ボタンを押してください。
 				リリース前のSQLを修正したい場合は、<em class="mark">Fix</em>ボタンを押してください。
@@ -138,7 +150,8 @@ dbflute_yourdb
 				<a href="../../../../../data/snapshot/intro/alter/alter-step1-prepare.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step1-prepare.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
-			<h3 id="step2">Step2. AlterCheckを実行する</h3>
+			<h2 id="step2">Step2. AlterCheckを実行する</h2>
+			<h3 id="step2-inner-0">Step2画面での操作</h3>
 			<p>
 				この画面で行う操作は3つあります。
 			</p>
@@ -151,7 +164,7 @@ dbflute_yourdb
 				<a href="../../../../../data/snapshot/intro/alter/alter-step2.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step2.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
-			<h4>AlterDDLを編集する</h4>
+			<h3 id="step2-inner-1">AlterDDLを編集する</h3>
 			<p>
 				Step2画面では、編集中のAlterDDL一覧が表示されています。<em class="mark"> (now prepared)</em> と末尾に書かれているファイルが、Step1でファイル名を入力することで作成されたファイルです。<br>
 				編集中のAlterDDLが格納されているディレクトリをみなさんのOSに搭載されているファイルエクスプローラで開くには、<em class="mark">SQL Files Directory</em> ボタンを押します。
@@ -168,7 +181,7 @@ dbflute_yourdb
              |-<span class="subpoint">alter-schema.sql</span>
              |-<span class="subpoint">alter-schema-[チケット番号].sql</span>
 </code></pre>
-			<h4>AlterCheckを実行する</h4>
+			<h3 id="step2-inner-2">AlterCheckを実行する</h3>
 			<p>
 				AlterDDLの編集が終わったら、<em class="mark">Execute AlterCheck</em> ボタンを押してください。
 				確認ダイアログが表示され、OKボタンを押すとAlterCheckを実行されます。
@@ -178,7 +191,7 @@ dbflute_yourdb
 				<a href="../../../../../data/snapshot/intro/alter/alter-step2-execute.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step2-execute.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
-			<h4>AlterCheck失敗の理由を確認する</h4>
+			<h3 id="step2-inner-3">AlterCheck失敗の理由を確認する</h3>
 			<p>
 				AlterCheckに失敗した場合、失敗した理由を確認し、再度AlterDDLを修正しなければなりません。
 				修正の鍵となる2つの情報がStep2画面上から確認できます。これらの情報はAlterCheckが失敗したあとから確認できるようになります。
@@ -202,7 +215,7 @@ dbflute_yourdb
 				<a href="../../../../../data/snapshot/intro/alter/alter-step2-failure-log.png" title="DBFluteIntro Top"><img src="../../../../../data/snapshot/intro/alter/alter-step2-failure-log.png" alt="DBFluteIntro Top" width="550" /></a>
 			</p>
 
-			<h3 id="next">Step1画面に戻ったら...</h3>
+			<h2 id="next">Step1画面に戻ったら...</h2>
 			<p>
 				晴れてAlterCheckがうまくいきました！！<br>
 				またDB変更をする場合は、Step1画面から作業を繰り返してください。
