--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,24 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.1.4</h2>
+        <p class="releas5date">2019/10/21</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>fix handleJsonBody(), not to handle query parameters if body</li>
+            <li>StreamResponse, make inActionTransaction() for DB-update</li>
+            <li>upgrade Lasta Di to 0.8.1</li>
+            <li>upgrade MailFlute to 0.6.2</li>
+            <li>upgrade Hibernate Validator to 6.0.17.Final</li>
+            <li>upgrade Gson to 6.0.17.Final</li>
+            <li>[lasta-doc engine] 内部的な例外ハンドリングの改善など</li>
+            <li>[Lasta Di] upgrade Javassist to 3.26.0.GA</li>
+            <li>[MailFlute] upgrade JavaMail to 1.6.2</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.3</h2>
         <p class="releas5date">2019/07/28</p>
         <div class="new">
